# SuperTuxSmash

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  gen_shader_permutations.py  player1.json  player1.txt  player2.json  player2.txt
.github/workflows/: linux.yml  windows.yml
assets/: Articles.json  BrdfLut512.json  BrdfLut512.lz4  FighterActions.json  FighterAnimations.json  FighterStates.json
assets/debug/: Capsule.sqm  Diamond.sqm  Sphere.sqm
assets/fighters/: Actions.json  Animations.json  Fighters.json  States.json
assets/particles/: Basic128.json
assets/skybox/: TextureCube.json
assets/stages/: Stages.json
assets/textures/: Gray20.json  White.json
cmake/: sources.cmake
cmake/modules/: FindSQEE.cmake
config/: player1.json  player2.json  player3.json  player4.json
shaders/: Composite.frag  Composite_fs.glsl  DepthMips.frag  FullScreen.vert  FullScreenFC.vert  FullScreenTC.vert  FullScreen_vs.glsl  Skybox.frag  Skybox.vert
shaders/blocks/: Camera.glsl  Effect.glsl  Environment.glsl  Skelly.glsl  Static.glsl
shaders/composite/: Composite_fs.glsl
shaders/debug/: Arrow_fs.glsl  Blob.frag  Blob.vert  Blob_vs.glsl  HitBlob_fs.glsl  HitBlob_vs.glsl  HitShape_fs.glsl  HitShape_vs.glsl  Lines.frag  Lines_fs.glsl  Lines_vs.glsl  Primitives.vert
shaders/depth/: Fighter_vs.glsl  Mask_fs.glsl  Simple_vs.glsl  Skelly_vs.glsl
shaders/editor/: Common.glsl  Irradiance.frag  Radiance.frag  Shrink.frag
shaders/fighters/: BasicFighter_fs.glsl  BasicFighter_vs.glsl
shaders/gbuffer/: BasicModel.frag.glsl  BasicModel.vert.glsl  General.frag.glsl  General.frag.json  General.vert.glsl  General.vert.json
shaders/generic/: FullScreen_vs.glsl  PassThrough_fs.glsl
shaders/lighting/: Skybox_fs.glsl  Skybox_vs.glsl
shaders/lights/: Default.frag  Default.frag.glsl
shaders/particles/: Generic.frag.glsl  Generic.geom  Generic.vert  Generic1x.frag  Generic2x.frag  Generic4x.frag  Generic8x.frag  test_fs.glsl  test_gs.glsl  test_vs.glsl
shaders/shadow/: BasicModel.frag.glsl  BasicModel.vert.glsl  General.frag.glsl  General.frag.json  General.vert.glsl  General.vert.json  Middle.frag
shaders/ssao/: BilateralBlur.frag  GTAO.frag.glsl
shaders/stage/: Skybox_vs.glsl
shaders/stages/: StaticMesh_vs.glsl
shaders/super/: BasicEffect.frag.glsl  BasicEffect.glsl  BasicModel.frag.glsl  BasicModel.glsl  BasicModel.vert.glsl
shaders/transparent/: BasicEffect.frag.glsl  BasicEffect.vert.glsl  Brawl.frag.glsl  Brawl.vert.json  Fancy.frag.glsl  Fancy.frag.json  Fancy.vert.glsl  General.frag.glsl  General.frag.json  General.vert.glsl  General.vert.json  Particles.frag  Particles.geom  Particles.vert
src/: DebugGlobals.cpp  DebugGlobals.hpp  enumerations.hpp  main.cpp  setup.hpp
src/caches/: MeshCache.cpp  MeshCache.hpp  ProgramCache.cpp  ProgramCache.hpp  SoundCache.cpp  SoundCache.hpp  TexArrayCache.cpp  TexArrayCache.hpp  TextureCache.cpp  TextureCache.hpp
src/editor/: ActionContext.cpp  ActionContext.hpp  ActionEditor.cpp  ActionEditor.hpp  ArticleContext.cpp  ArticleContext.hpp  BaseContext.cpp  BaseContext.hpp  BaseContextImpl.hpp  EditorCamera.cpp  EditorCamera.hpp  EditorScene.cpp  EditorScene.hpp  Editor_Action.cpp  Editor_Action.hpp  Editor_Effects.cpp  Editor_Emitters.cpp  Editor_Fighter.cpp  Editor_Fighter.hpp  Editor_Helpers.cpp  Editor_Helpers.hpp  Editor_Hitblobs.cpp  Editor_HurtBlobs.cpp  Editor_HurtBlobs.hpp  Editor_Hurtblobs.cpp  Editor_Procedures.cpp  Editor_Script.cpp  Editor_Sounds.cpp  Editor_Stage.cpp  Editor_Stage.hpp  FighterContext.cpp  FighterContext.hpp  StageContext.cpp  StageContext.hpp
src/fighters/: Cheese_Actions.cpp  Cheese_Actions.hpp  Cheese_Fighter.cpp  Cheese_Fighter.hpp  Cheese_Render.cpp  Cheese_Render.hpp  Mario_Fighter.cpp  Mario_Fighter.hpp  Mario_Render.cpp  Mario_Render.hpp  Sara_Actions.cpp  Sara_Actions.hpp  Sara_Fighter.cpp  Sara_Fighter.hpp  Sara_Render.cpp  Sara_Render.hpp  Tux_Actions.cpp  Tux_Actions.hpp  Tux_Fighter.cpp  Tux_Fighter.hpp  Tux_Render.cpp  Tux_Render.hpp
src/game/: Action.cpp  Action.hpp  ActionBuilder.cpp  ActionBuilder.hpp  ActionEnums.hpp  ActionFuncs.cpp  ActionFuncs.hpp  Actions.cpp  Actions.hpp  Article.cpp  Article.hpp  ArticleDef.cpp  ArticleDef.hpp  Attacks.cpp  Attacks.hpp  Blobs.cpp  Blobs.hpp  Controller.cpp  Controller.hpp  EffectInstance.cpp  EffectInstance.hpp  EffectSystem.cpp  EffectSystem.hpp  Emitter.cpp  Emitter.hpp  Entity.cpp  Entity.hpp  EntityDef.cpp  EntityDef.hpp  FightSystem.cpp  FightSystem.hpp  FightWorld.cpp  FightWorld.hpp  Fighter.cpp  Fighter.hpp  FighterAction.cpp  FighterAction.hpp  FighterDef.cpp  FighterDef.hpp  FighterEnums.hpp  (+34 more)
src/main/: DebugGui.cpp  DebugGui.hpp  Enumerations.hpp  GameScene.cpp  GameScene.hpp  GameSetup.cpp  GameSetup.hpp  Globals.cpp  Globals.hpp  MainEnums.hpp  MenuScene.cpp  MenuScene.hpp  Options.cpp  Options.hpp  Resources.cpp  Resources.hpp  SmashApp.cpp  SmashApp.hpp
src/render/: AnimPlayer.cpp  AnimPlayer.hpp  Camera.cpp  Camera.hpp  DebugRender.cpp  DebugRender.hpp  DrawItem.cpp  DrawItem.hpp  Environment.cpp  Environment.hpp  Fighter.cpp  Fighter.hpp  ParticleRender.cpp  ParticleRender.hpp  RenderEntity.cpp  RenderEntity.hpp  RenderFighter.cpp  RenderFighter.hpp  RenderObject.cpp  RenderObject.hpp  RenderStage.cpp  RenderStage.hpp  Renderer.cpp  Renderer.hpp  ResourceCaches.cpp  ResourceCaches.hpp  SceneData.cpp  SceneData.hpp  StandardCamera.cpp  StandardCamera.hpp  UniformBlocks.hpp
src/scenes/: GameScene.cpp  GameScene.hpp
src/stages/: TestZone_Render.cpp  TestZone_Render.hpp  TestZone_Stage.cpp  TestZone_Stage.hpp
wren/: Article.wren  Base.wren  Controller.wren  Fighter.wren  FighterAction.wren  FighterLibrary.wren  FighterState.wren  Physics.wren  Stage.wren  World.wren  sts.wren
wren/actions/: AirBack.wren  AirDodge.wren  AirDown.wren  AirForward.wren  AirHopBack.wren  AirHopForward.wren  AirNeutral.wren  AirUp.wren  Brake.wren  BrakeTurn.wren  ChargeDown.wren  ChargeForward.wren  ChargeUp.wren  CrouchOff.wren  CrouchOn.wren  DashAttack.wren  DashGrab.wren  DashStart.wren  DashStartTurn.wren  (+46 more)
(+861 files in other folders)
